cmake_minimum_required(VERSION 3.28)
project(editc)

set(CMAKE_CXX_STANDARD 17)

add_executable(editc main.cpp
        lamp/list/ls.cpp
        lamp/list/ls.h
        lamp/list/ls.h
        lamp/list/ls.cpp
        lamp/list/ls.cpp
        lamp/list/ls.cpp
        lamp/local/ambient/home.cpp
        lamp/local/ambient/home.h
        lamp/form/ui/cookies.cpp
        lamp/form/ui/cookies.h
        lamp/form/ui/cookies.ui
        lamp/form/cute/graphics/check/cats.cpp
        lamp/form/cute/graphics/check/cats.h)
